# unlimited-telegram-storage

./: .gitignore  README.md  cli.py  pretty_print.py  pyproject.toml  utils.py
core/: __init__.py  config_manager.py  file_processor.py  metadata.py  telegram_client.py
